syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lamnguyen.profile_service.protos";
option java_outer_classname = "ProfileProto";

import "google/protobuf/wrappers.proto";

service ProfileService {
  rpc GetUserProfile (ProfileUserRequest) returns (ProfileUserResponse);
}

message ProfileUserRequest {
  int64 user_id = 1;
}

enum SexEnum {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}

message ProfileUserResponse {
  int64 id = 1;
  string email = 2;
  string fullName = 3;
  google.protobuf.StringValue avatar = 4;
  string phone = 5;
  optional SexEnum gender = 6;
  google.protobuf.StringValue birthday = 7;
  float height = 8;
  float weight = 9;
  string countryCode = 10;
}
